styling conform colorscheme

--- a/src/app/courses/template/lesson1/lesson1.component.html
+++ b/src/app/courses/template/lesson1/lesson1.component.html
@@ -20,7 +20,7 @@
     </ul>
     <button class="btn" type="submit">Submit</button>
     <div class="well">
-      <p>You got {{ correctCount }} out of {{questions.length}} right!</p>
+      <p>You got .. {{ correctCount }} out of {{questions.length}} right!</p>
     </div>
 
   </div>
