--- a/src/app/courses/template/lesson1/lesson1.component.css
+++ b/src/app/courses/template/lesson1/lesson1.component.css
@@ -20,10 +20,31 @@ text-align: center;
 }
 
 .questions {
-  margin-left: -45px;
-
+  margin-left: -80px;
+  font-family: Cambria, sans-serif;
+  font-size: 14px;
 }
 
 .answer {
   color:#DFDCE3;
+  margin-left: 15px;
+}
+
+p {
+  font-family: Cambria, sans-serif;
+  font-size: 14px;
+  margin-left: 54px;
+}
+
+button {
+  font-family: Cambria, sans-serif;
+  font-size: 14px;
+  margin-left: 54px;
+  background-color: #FC4A1A;
+  border: 2px solid #FC4A1A;
+  color:#DFDCE3;
+}
+
+button:hover {
+  cursor: pointer;
 }
