--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,11 @@
 <!-- //<app-home></app-home> -->
-
+<!-- //to check connection to database -->
+<!-- <h1>
+  <ul>
+    <li *ngFor="let profile of profiles | async">
+      {{profile.$value}}
+    </li>
+  </ul>
+</h1> -->
 
 <router-outlet></router-outlet>
