add function to submit button lesson 1 (without functionality

--- a/src/app/courses/template/lesson1/lesson1.component.html
+++ b/src/app/courses/template/lesson1/lesson1.component.html
@@ -13,12 +13,12 @@
       <ul *ngFor="let question of questions">
         <p class="question">{{ question.questionText }}</p>
         <ul class="answer" *ngFor="let answer of question.answers">
-          <input type="radio" >{{ answer.answerText }}
+          <input type="radio" value = "{{answer.answerText }}"> {{ answer.answerText }}
         </ul>
       </ul>
 
     </ul>
-    <button class="btn" type="submit">Submit</button>
+    <button class="btn" type="submit" (click) ="showResult()">Submit</button>
     <div class="well">
       <p>You got .. {{ correctCount }} out of {{questions.length}} right!</p>
     </div>
