changed name of image files for consistency

--- a/src/app/courses/angularjs/angularjs.component.html
+++ b/src/app/courses/angularjs/angularjs.component.html
@@ -1,6 +1,6 @@
 <app-headercomponent></app-headercomponent>
 
 <app-template name = "Angular.JS" category ="MVC Framework" urlName=
-"/assets/angular.png" description=
+"/assets/angularjs.png" description=
 "TEXT" lesson1="
-??" lesson2="??" progressUrl="/assets/angular-inprogress.png" finishedUrl="/assets/angular-done.png"></app-template>
+??" lesson2="??" progressUrl="/assets/angularjs-inprogress.png" finishedUrl="/assets/angularjs-done.png"></app-template>
