--- a/src/app/courses/emberjs/emberjs.component.html
+++ b/src/app/courses/emberjs/emberjs.component.html
@@ -1,6 +1,6 @@
 <app-headercomponent></app-headercomponent>
 
 <app-template name = "Ember.JS" category ="MVVM Framework" urlName=
-"/assets/Emberjs.png" description=
+"/assets/emberjs.png" description=
 "TEXT" lesson1="
 ??" lesson2="??" progressUrl="/assets/emberjs-inprogress.png" finishedUrl="/assets/emberjs-done.png"></app-template>
