--- a/src/app/courses/javascript/javascript.component.html
+++ b/src/app/courses/javascript/javascript.component.html
@@ -1,6 +1,6 @@
 <app-headercomponent></app-headercomponent>
 
 <app-template name = "JavaScript" category ="Interactivity" urlName=
-"/assets/javascript-geel.png" description=
+"/assets/javascript.png" description=
 "TEXT" lesson1="
 ??" lesson2="??" progressUrl="/assets/javascript-inprogress.png" finishedUrl="/assets/javascript-done.png"></app-template>
