redirecting to profilepage works + lock picuture added to login + in colorscheme style

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,8 @@
-<div class="form-container">
+<div class="container">
   <img src = "assets/lock.png" id = "lock" />
-
+<br />
     <span class = "error" *ngIf="error"> {{error}}</span>
-
-    <button (click)="loginGoogle()"> Login with Google</button>
-      <button (click)="logout()"> Logout</button>
-
+    <button (click)="loginGoogle()"> Login with Google </button><br />
+    
 
 </div>
