--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -2,7 +2,7 @@
   <nav role="navigation">
     <ul>
       <li>
-        <a href="/">
+        <a href="/courses">
           <div id = "course_hidden">
             <img src="/assets/logo-totaal.png" /> Courses
           </div>
@@ -19,6 +19,7 @@
             <li><a href="/profile/progress">Progress</a></li>
             <li><a href="/profile/settings">Settings</a></li>
             <li><a href="/profile/users">Users</a></li>
+            <li><a (click) = "logout()">Logout</a></li>
           </ul>
         </div>
       </li>
