--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -5,7 +5,7 @@
 <br />
 <br />
 <img id="logo"src="/assets/user.png"/>
-<h1> Name of user </h1>
+<h1> {{userName}} </h1>
 <div class="footer">
   <img src="/assets/logo-klein.jpg" />
 </div>
