commented out authentication + now see profile image of google account

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -4,7 +4,7 @@
 <br />
 <br />
 <br />
-<img id="logo"src="/assets/user.png"/>
+<img id="logo"src="{{userImage}}"/>
 <h1> {{userName}} </h1>
 <div class="footer">
   <img src="/assets/logo-klein.jpg" />
