--- a/src/app/courses/template/lesson1/lesson1.component.html
+++ b/src/app/courses/template/lesson1/lesson1.component.html
@@ -18,9 +18,10 @@
       </ul>
 
     </ul>
-    <button class="btn" type="submit" (click) ="showResult()">Submit</button>
+    <!-- <button class="btn" type="submit" (click) ="showResult()">Submit</button> -->
+        <button class="btn" type="submit" >Submit</button>
     <div class="well">
-      <p>You got .. {{ correctCount }} out of {{questions.length}} right!</p>
+      <p>You got .. out of {{questions.length}} right!</p>
     </div>
 
   </div>
