functionality implemented in multiple choice questions; but still gives alway 4 out of 4 good

--- a/src/app/courses/template/lesson1/lesson1.component.css
+++ b/src/app/courses/template/lesson1/lesson1.component.css
@@ -48,3 +48,11 @@ button {
 button:hover {
   cursor: pointer;
 }
+
+.isCorrect_true{
+  background-color: green;
+}
+
+.isCorrect_false{
+  background-color: red;
+}
