--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <img src = "assets/lock.png" id = "lock" />
 <br />
-    <span class = "error" *ngIf="error"> {{error}}</span>
-    <button (click)="loginGoogle()"> Login with Google </button><br />
-    
+    <span class = "error" *ngIf="error"> {{error}}</span> <br />
+    <!-- <button (click)="loginGoogle()"> Login with Google </button><br /> -->
+    <img id="google" src="/assets/google-login.png" (click)="loginGoogle()" />
 </div>
