--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -35,3 +35,12 @@ margin-right: auto;
   text-align: center;
   top: 1200px;
 }
+
+p {
+  font-weight: normal;
+  font-size: 16px;
+  font-family: Cambria, serif;
+  color: #DFDCE3;
+  margin-top: 25px;
+  text-align: center;
+}
