--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -6,6 +6,7 @@
 <br />
 <img id="logo"src="{{userImage}}"/>
 <h1> {{userName}} </h1>
+<p> {{userEmail}} </p>
 <div class="footer">
   <img src="/assets/logo-klein.jpg" />
 </div>
