--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -8,7 +8,7 @@
 <br />
 <h1>
  <ul>
-   <li *ngFor="let profile of profiles | async">
+   <li *ngFor="let profile of profiles">
      {{profile.$value}}
    </li>
  </ul>
