--- a/src/app/courses/course-list/course-item.component.html
+++ b/src/app/courses/course-list/course-item.component.html
@@ -1,7 +1,7 @@
 <a href="{{course.urlPath}}" class="list-group-item-clearfix">
   <span>
       <img class = "img-responsive"
-                  src = "{{course.imagePath}}"
+                  src = "{{course.imageurl}}"
           style = "..."
         />
 
