--- a/src/app/progress/progress.component.html
+++ b/src/app/progress/progress.component.html
@@ -5,23 +5,9 @@
 <h1>Progress</h1>
 
 
-<ul>
-  <li>
-    <h2>Introduction</h2>
-    <ng-template ngFor [ngForOf]="courses" let-course>
+<ul *ngFor="let course of courses" >
 
-          <p style="width:80%" data-value="80">{{course['name']}}</p>
-          <progress max="100" value="{{course['progress']}}" ></progress> </ng-template>
+          <p>{{course.name}}</p><br />
+          <progress max="100" value="{{course.progress}}" ></progress>
 
-  </li>
-
-  <li id="frameworks">
-    <h2>Frameworks</h2>
-
-    <ng-template ngFor [ngForOf]="icourses" let-icourse>
-
-          <p style="width:80%" data-value="80">{{icourse['name']}}</p>
-          <progress max="100" value="{{icourse['progress']}}" ></progress> </ng-template>
-
-  </li>
 </ul>
