when adding new course; course image is uploaded to firebase storage

--- a/src/app/courses/course-list/course-item.component.html
+++ b/src/app/courses/course-list/course-item.component.html
@@ -1,6 +1,6 @@
 <a href="{{course.urlPath}}" class="list-group-item-clearfix">
   <span>
-      <img class = "img-responsive"
+      <img id = "image" class = "img-responsive"
                   src = "{{course.imageurl}}"
           style = "..."
         />
