--- a/src/app/courses/template/template.component.css
+++ b/src/app/courses/template/template.component.css
@@ -60,6 +60,9 @@ margin-top: 30px;
   background-color: #F7B733;
   border-radius: 10px;
 }
+button:hover {
+  cursor: pointer;
+}
 
 #enroll button,p, header nav ul li a div {
   font-family: Cambria;
