standard picture is uploaded from local storage'

--- a/src/app/courses/angularjs/angularjs.component.html
+++ b/src/app/courses/angularjs/angularjs.component.html
@@ -1,6 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name = "Angular.JS" category ="MVC Framework" urlName=
-"/assets/angularjs.png" description=
+<app-template name = "Angular.JS" category ="MVC Framework" description=
 "TEXT" lesson1="
-??" lesson2="??" progressUrl="/assets/angularjs-inprogress.png" finishedUrl="/assets/angularjs-done.png"></app-template>
+??" lesson2="??" imageurlprogress="/assets/angularjs-inprogress.png" imageurldone="/assets/angularjs-done.png"></app-template>
