--- a/src/app/courses/bootstrap/bootstrap.component.html
+++ b/src/app/courses/bootstrap/bootstrap.component.html
@@ -1,6 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name = "Bootstrap" category ="CSS Templates" urlName=
-"/assets/bootstrap.png" description=
+<app-template name = "Bootstrap" category ="CSS Templates" description=
 "TEXT" lesson1="
-??" lesson2="??" progressUrl="/assets/bootstrap-inprogress.png" finishedUrl="/assets/bootstrap-done.png"></app-template>
+??" lesson2="??" imageurlprogress="/assets/bootstrap-inprogress.png" imageurldone="/assets/bootstrap-done.png"></app-template>
