--- a/src/app/courses/newcourse/newcourse.component.html
+++ b/src/app/courses/newcourse/newcourse.component.html
@@ -1,6 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name = "NewCourse" category =" " urlName=
-"/assets/newcourse.png" description=
+<app-template name = "NewCourse" category =" " description=
 "This is your new course" lesson1="
-New Course Lesson 1" lesson2="New Course lesson2" progressUrl="/assets/newcourse-inprogress.png" finishedUrl="/assets/newcourse-done.png"></app-template>
+New Course Lesson 1" lesson2="New Course lesson2" imageurlprogress="/assets/newcourse-inprogress.png" imageurldone="/assets/newcourse-done.png"></app-template>
