--- a/src/app/courses/template/template.component.html
+++ b/src/app/courses/template/template.component.html
@@ -12,7 +12,7 @@
   <div class="border-left-up">
     <span>
       <img id = "myImage" class = "img-responsive"
-          src = "{{urlName}}"
+          src = "{{imageurl}}"
           />
           <hr />
   </span>
