now general method for uploading files from firebase storage; general + done + progress images

--- a/src/app/courses/css/css.component.html
+++ b/src/app/courses/css/css.component.html
@@ -1,4 +1,4 @@
 <app-headercomponent></app-headercomponent>
 
 <app-template name = "CSS" category ="WebDesign" description=" dfsdlkfjsdklf sdf" lesson1="
-Selectors" lesson2="Flexbox" lesson1url="courses/css/lesson1" imageurlprogress="/assets/css-inprogress.png" imageurldone="/assets/css-done.png"></app-template>
+Selectors" lesson2="Flexbox" lesson1url="courses/css/lesson1"></app-template>
