--- a/src/app/courses/javascript/javascript.component.html
+++ b/src/app/courses/javascript/javascript.component.html
@@ -2,4 +2,4 @@
 
 <app-template name = "JavaScript" category ="Interactivity" description=
 "TEXT" lesson1="
-??" lesson2="??" imageurlprogress="/assets/javascript-inprogress.png" imageurldone="/assets/javascript-done.png"></app-template>
+??" lesson2="??" ></app-template>
