--- a/src/app/courses/angularjs/angularjs.component.html
+++ b/src/app/courses/angularjs/angularjs.component.html
@@ -1,5 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name = "Angular.JS" category ="MVC Framework" description=
+<app-template name = "Angularjs" category ="MVC Framework" description=
 "TEXT" lesson1="
-??" lesson2="??" imageurlprogress="/assets/angularjs-inprogress.png" imageurldone="/assets/angularjs-done.png"></app-template>
+??" lesson2="??" ></app-template>
