--- a/src/app/courses/bootstrap/bootstrap.component.html
+++ b/src/app/courses/bootstrap/bootstrap.component.html
@@ -2,4 +2,4 @@
 
 <app-template name = "Bootstrap" category ="CSS Templates" description=
 "TEXT" lesson1="
-??" lesson2="??" imageurlprogress="/assets/bootstrap-inprogress.png" imageurldone="/assets/bootstrap-done.png"></app-template>
+??" lesson2="??" ></app-template>
