--- a/src/app/courses/emberjs/emberjs.component.html
+++ b/src/app/courses/emberjs/emberjs.component.html
@@ -1,5 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name = "Ember.JS" category ="MVVM Framework" description=
+<app-template name = "Emberjs" category ="MVVM Framework" description=
 "TEXT" lesson1="
-??" lesson2="??" imageurlprogress="/assets/emberjs-inprogress.png" imageurldone="/assets/emberjs-done.png"></app-template>
+??" lesson2="??" ></app-template>
