--- a/src/app/courses/html/html.component.html
+++ b/src/app/courses/html/html.component.html
@@ -2,4 +2,4 @@
 
   <app-template name = "HTML" category ="WebStructure" description=
   "In this course you will learn the basics of HTML. Hypertext Markup Language(HTML) is the standard language for creating web-pages with the goal to define the structure of it. HTML works with so-called tags that describe the different elements in your document. Mostly HTML is combined with CSS and JavaScript, which will be covered in other courses." lesson1="
-  Structure" lesson2="HTML Elements" lesson1url="courses/html/lesson1" imageurlprogress="/assets/html-inprogress.png" imageurldone="/assets/html-done.png"></app-template>
+  Structure" lesson2="HTML Elements" lesson1url="courses/html/lesson1" ></app-template>
