--- a/src/app/courses/threejs/threejs.component.html
+++ b/src/app/courses/threejs/threejs.component.html
@@ -1,5 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name = "Three.JS" category ="3D Library" description=
+<app-template name = "Threejs" category ="3D Library" description=
 "TEXT" lesson1="
-??" lesson2="??" imageurlprogress="/assets/threejs-inprogress.png" imageurldone="/assets/threejs-done.png"></app-template>
+??" lesson2="??" ></app-template>
