users are now added to database (besided auth) with a role(same for now)

--- a/src/app/home.component.html
+++ b/src/app/home.component.html
@@ -9,7 +9,7 @@
 <div class="list-group-item-clearfix">
   <span>
       <img class = "img-responsive"
-                  src = "/assets/newcourse.png"
+                  src = "/assets/NewCourse.png"
           style = "..."
         />
 
