--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -8,8 +8,7 @@
 <br />
 <h1>
  <ul>
-   <li *ngFor="let profile of profiles">
-     {{profile.$value}}
-   </li>
+   <li *ngFor="let user of users" >{{user.username}} ---- {{user.email}} ----- {{user.role}}</li>
  </ul>
+
 </h1>
