26787 (partial) applied to all courses: data is fetched from database and now also shows when image is updated from normal to enrolled to finished. Stays changed after refreshing the page as well.

--- a/src/app/courses/css/css.component.html
+++ b/src/app/courses/css/css.component.html
@@ -1,4 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name = "CSS" category ="WebDesign" description=" dfsdlkfjsdklf sdf" lesson1="
-Selectors" lesson2="Flexbox" lesson1url="courses/css/lesson1"></app-template>
+<app-template name = "{{name}}" category ="{{category}}" description=
+"{{description}}" lesson1="
+{{lesson1}}" lesson2="{{lesson2}}" lesson1url="{{lesson1url}}" imageurl = "{{image}}" ></app-template>
