--- a/src/app/courses/threejs/threejs.component.html
+++ b/src/app/courses/threejs/threejs.component.html
@@ -1,5 +1,5 @@
 <app-headercomponent></app-headercomponent>
 
-<app-template name = "Threejs" category ="3D Library" description=
-"TEXT" lesson1="
-??" lesson2="??" ></app-template>
+<app-template name = "{{name}}" category ="{{category}}" description=
+"{{description}}" lesson1="
+{{lesson1}}" lesson2="{{lesson2}}" lesson1url="{{lesson1url}}" imageurl = "{{image}}" ></app-template>
