display active users with role and email as well

--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -14,5 +14,10 @@ ul li {
   font-family: Cambria, serif;
   margin-left: 16px;
   color: #DFDCE3;
+}
 
+ul {
+  column-count: 3;
+ column-gap: 10px;
+ list-style: none;
 }
