--- a/src/app/courses/newcourse/newcourse.component.html
+++ b/src/app/courses/newcourse/newcourse.component.html
@@ -2,4 +2,4 @@
 
 <app-template name = "NewCourse" category =" " description=
 "This is your new course" lesson1="
-New Course Lesson 1" lesson2="New Course lesson2"></app-template>
+New Course Lesson 1" lesson2="New Course lesson2" imageurl= "/assets/NewCourse.png"></app-template>
