--- a/src/app/courses/course-list/course-item.component.css
+++ b/src/app/courses/course-list/course-item.component.css
@@ -64,3 +64,19 @@ progress[value]::-webkit-progress-value {
   border-radius: 2px;
   background-size: 35px 20px, 100% 100%, 100% 100%;
 }
+
+button {
+  font-size: 10px;
+  font-style: Cambra, sans-serif;
+  margin-left: 230px;
+  margin-top: 20px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: white;
+  color: red;
+  border:white;
+}
+button:hover {
+  cursor: pointer;
+}
