26783 A user can delete course

--- a/src/app/courses/course-list/course-item.component.css
+++ b/src/app/courses/course-list/course-item.component.css
@@ -76,7 +76,8 @@ button {
   background-color: white;
   color: red;
   border:white;
+  z-index: -1;
 }
 button:hover {
-  cursor: pointer;
+  cursor: crosshair;
 }
