functions depenent of new role: delete course , view users, add course

--- a/src/app/courses/course-list/course-item.component.html
+++ b/src/app/courses/course-list/course-item.component.html
@@ -1,6 +1,6 @@
 <a class="list-group-item-clearfix">
   <span>
-<button (click) = "deleteCourse(course.name)" >X</button>
+<button (click) = "deleteCourse(course.name)" *ngIf ="Editor || Admin">X</button>
   <a href="{{course.urlPath}}">
       <img id = "image" class = "img-responsive"
                   src = "{{course.imageurl}}"
