--- a/src/app/header.component.html
+++ b/src/app/header.component.html
@@ -9,7 +9,7 @@
         </a>
       </li>
       <li id="profile">
-        <a [routerLink]="['/profile']">
+        <a *ngIf="Admin || Student" [routerLink]="['/profile']">
           <div>
             Profile
           </div>
